fix overlap of body in footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ body {
     min-height: 100vh;
     position: relative;
     margin: 0;
-    padding-bottom: 10px;   
+    padding-bottom: 4rem;   
 }
 
 /* ------------------------- General Headings --*/
